Cabal/tests/ParserTests/errors/common1.cabal
name:                common
version:             0
synopsis:            Common-stanza demo demo
build-type:          Simple
cabal-version:       >=2.1

source-repository head
  Type:     git
  Location: https://github.com/hvr/-.git

common windows
  if os(windows)
    build-depends: Win32

-- Non-existing common stanza
common deps
  import: windo
  build-depends:
    base >=4.10 && <4.11,
    containers

library
  import: deps

  default-language: Haskell2010
  exposed-modules:  ElseIf

  build-depends:
    ghc-prim
